@@ -11,10 +11,12 @@ import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 
 import java.io.InputStream;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.ArrayList;
 
 public class ExcelUpload {
 
@@ -24,27 +26,37 @@ public class ExcelUpload {
         try {
             InputStream inputStream = context.getContentResolver().openInputStream(fileUri);
             Workbook workbook = new XSSFWorkbook(inputStream);
-            Sheet sheet = workbook.getSheetAt(0); // Prima foaie
+            Sheet sheet = workbook.getSheetAt(0);
 
             String lastCategory = "";
             String lastTestTitle = "";
             String createdBy = "";
             String quizImageUrl = "";
+            Map<String, Set<String>> categoryTestsMap = new HashMap<>();
 
             for (Row row : sheet) {
-                if (row.getRowNum() == 0) continue; // Sari peste antet
+                if (row.getRowNum() == 0) continue;
 
-                String category = row.getCell(0).getStringCellValue();
-                String testTitle = row.getCell(1).getStringCellValue();
-                String newCreatedBy = row.getCell(2).getStringCellValue();
-                String newQuizImageUrl = row.getCell(3).getStringCellValue();
+                if (row.getCell(0) == null || row.getCell(1) == null) {
+                    Log.e("ExcelUpload", "Rând ignorat din cauza valorilor lipsă");
+                    continue;
+                }
 
-                // Dacă este un test nou, adăugăm metadatele testului
-                if (!category.equals(lastCategory) || !testTitle.equals(lastTestTitle)) {
-                    lastCategory = category;
+                String category = row.getCell(0).getStringCellValue().trim();
+                String testTitle = row.getCell(1).getStringCellValue().trim();
+
+                if (category.isEmpty() || testTitle.isEmpty()) {
+                    Log.e("ExcelUpload", "Categorie sau titlu test lipsă, rând ignorat");
+                    continue;
+                }
+
+                categoryTestsMap.putIfAbsent(category, new HashSet<>());
+                categoryTestsMap.get(category).add(testTitle);
+
+                if (!testTitle.equals(lastTestTitle)) {
                     lastTestTitle = testTitle;
-                    createdBy = newCreatedBy;
-                    quizImageUrl = newQuizImageUrl;
+                    createdBy = row.getCell(2) != null ? row.getCell(2).getStringCellValue().trim() : "";
+                    quizImageUrl = row.getCell(3) != null ? row.getCell(3).getStringCellValue().trim() : "";
 
                     Map<String, Object> quizInfo = new HashMap<>();
                     quizInfo.put("createdBy", createdBy);
@@ -57,16 +69,21 @@ public class ExcelUpload {
                             .set(quizInfo);
                 }
 
-                String question = row.getCell(4).getStringCellValue();
-                String imageUrl = row.getCell(5).getStringCellValue();
-                String option1 = row.getCell(6).getStringCellValue();
-                String option2 = row.getCell(7).getStringCellValue();
-                String option3 = row.getCell(8).getStringCellValue();
-                String option4 = row.getCell(9).getStringCellValue();
+                if (row.getCell(4) == null || row.getCell(6) == null || row.getCell(7) == null || row.getCell(8) == null || row.getCell(9) == null || row.getCell(10) == null || row.getCell(11) == null) {
+                    Log.e("ExcelUpload", "Întrebare ignorată din cauza valorilor lipsă");
+                    continue;
+                }
+
+                String question = row.getCell(4).getStringCellValue().trim();
+                String imageUrl = row.getCell(5) != null ? row.getCell(5).getStringCellValue().trim() : "";
+                String option1 = row.getCell(6).getStringCellValue().trim();
+                String option2 = row.getCell(7).getStringCellValue().trim();
+                String option3 = row.getCell(8).getStringCellValue().trim();
+                String option4 = row.getCell(9).getStringCellValue().trim();
                 int correctAnswerIndex = (int) row.getCell(10).getNumericCellValue();
                 int points = (int) row.getCell(11).getNumericCellValue();
 
-                List<String> options = Arrays.asList(option1, option2, option3, option4);
+                List<String> options = List.of(option1, option2, option3, option4);
 
                 Map<String, Object> questionData = new HashMap<>();
                 questionData.put("question", question);
@@ -81,6 +98,16 @@ public class ExcelUpload {
                         .add(questionData)
                         .addOnSuccessListener(documentReference -> Log.d("ExcelUpload", "Întrebare adăugată: " + documentReference.getId()))
                         .addOnFailureListener(e -> Log.e("ExcelUpload", "Eroare la încărcare", e));
+            }
+
+            for (Map.Entry<String, Set<String>> entry : categoryTestsMap.entrySet()) {
+                Map<String, Object> categoryData = new HashMap<>();
+                categoryData.put("noTests", entry.getValue().size());
+                categoryData.put("subcollections", new ArrayList<>(entry.getValue()));
+
+                db.collection("QUIZES")
+                        .document(entry.getKey())
+                        .set(categoryData);
             }
 
             workbook.close();
